--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -18,10 +18,10 @@ env:
   # Configuration type to build.
   # You can convert this to a build matrix if you need coverage of multiple configuration types.
   # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-  BUILD_CONFIGURATION: Release
-  BUILD_PLATFORM: x64
-  # PROJECTCONFIGURATION: Release\|x64
-  # /p:ProjectConfiguration=${{env.PROJECTCONFIGURATION}}
+  BUILD_CONFIGURATION: "Release"
+  BUILD_PLATFORM: "x64"
+  PROJECTCONFIGURATION: "Release|x64"
+  
 
 permissions:
   contents: read
@@ -51,4 +51,4 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:Platform=${{env.BUILD_PLATFORM}} ${{env.SOLUTION_FILE_PATH}}
+      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:Platform=${{env.BUILD_PLATFORM}} /p:ProjectConfiguration=${{env.PROJECTCONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
