--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -44,8 +44,16 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:Platform=${{env.BUILD_PLATFORM}} ${{env.SOLUTION_FILE_PATH}}
 
+    - name: copy DLL
+      shell: powershell
+      run: copy lib\x64\release\*.dll bin\x64\Release\
+
+    - name: copy Keywords
+      shell: powershell
+      run: copy lib\Keywords.db bin\x64\Release\
+
     - name: Archive production artifacts
       uses: actions/upload-artifact@v4
       with:
         name: Release_x64_exe
-        path: bin
+        path: bin\x64\Release
